--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -50,7 +50,7 @@
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
               quod aliquid inventore vero perspiciatis.</p>
             <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a> 
-            This is comment out
+            This is comment out...
           </div>
         </div>
       </div>
