--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,372 +1,30 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-    <div class="container">
-      <a href="index.html" class="navbar-brand"> 
-          <picture>
-              <source srcset="../assets/img/1.png" width="250px" media="(min-width: 576px)">
-                <source srcset="../assets/img/1Mobile.png" width="250px" media="(max-width: 576px)">
-                <img src="../assets/img/1Mobile.png" width="250px"/>
-            </picture>
-          </a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="#showcase"  class="nav-link nav-link-color">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#about" class="nav-link nav-link-color">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a href="#home-icons" class="nav-link nav-link-color">Services</a>
-          </li>
-          <!-- <li class="nav-item">
-            <a href="#gallery" class="nav-link nav-link-color">Our Work</a>
-          </li> -->
-          <li class="nav-item">
-            <a href="#contact" class="nav-link nav-link-color">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-angle-up"></i></button>
-<!-- SHOWCASE SLIDER -->
+<app-nav></app-nav>
 
+<!-- SHOWCASE SLIDER -->
 <section id="showcase">
   <div id="myCarousel" class="carousel slide" style="top:-1px"data-ride="carousel">
-    <!-- <img src="../../assets/img/banner-image.png" class="img-fluid"/> -->
-    <app-svg-banner></app-svg-banner>
-    <!-- <ol class="carousel-indicators" style="bottom: 15px">
-      <a href="#about" data-slide-to="1"><img src="../../assets/img/down-arrow-wht.png" width="50px" class="img-fluid"/></a> -->
-      <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
-    <!-- </ol> -->
-    <!-- <div class="carousel-inner">
-      <div class="carousel-item carousel-image-1 active">
-        <div class="container">
-          <div class="carousel-caption d-none d-sm-block text-right mb-5">
-            <h1 class="display-3">Heading One</h1>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
-              quod aliquid inventore vero perspiciatis.</p>
-            <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a> 
-            This is comment out....
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-   
+    <app-svg-banner></app-svg-banner>   
   </div>
 </section>
+
 <!-- INFO SECTION -->
 <section id="about" >
-    <div class="container">
-        <h1 class="text-center mainheading" >Who we are</h1>
-      <div class="row">
-          <div class="col-md-6 First align-self-center pb-5">
-              <img src="../../assets/img/WhoWeAre1.png" alt="" class="img-fluid">
-          </div> 
-        <div class="col-md-6 text-center align-self-center">
-              <p class="para">
-                We are <b>Zinfinity;</b> A highly motivated team who works to develope a unique idea into it's soft format. A team which really work hard to visualize and implement your thought with balance in software quality and impact.<br>
-              </p>
-              <p class="para">Every challenge is an opportunity to acheive the best out of industry and our team is completely dedicated to it.
-              </p>
-            </div>
-        
-        
-        
-      </div>
-      <!-- <div class="row" style="line-height:5">
-          <div class="col-md-3">
-              </div>
-            <div class="col-md-6">
-                <img src="../../assets/img/WhoWeAre.png" alt="" class="img-fluid">
-              </div>
-            <div class="col-md-3">
-              </div>
-      </div> -->
-    </div>
-  </section>
+  <app-about></app-about>   
+</section>
 
 <!--HOME ICON SECTION  -->
 <section id="home-icons" class="py-5 sectionServices" >
-  <div class="container">
-      <h1 class="text-center mainheading">Services</h1>
-      <p class="text-center" style="font-size: 25px">Our Focused Services</p>
-    <div id="cardServices" class="row">
-      <div class="col-md-4 mb-4 text-center pt-3" data-toggle="modal" data-target="#exampleModalCenter">
-          <img class="antiCardServices" src="../../assets/img/icons/2.png" width="70px" height="88px"/>
-        <h3 class="heading3 antiCardServices">Web Application</h3>
-        <p class="paraServices antiCardServices">A Website / Application is face of company in world wide web. We understand and hardcraft it with a unique custome design and best avilable technology such as angular for single page application.</p>
-      </div>
-      <div class="col-md-4 mb-4 text-center pt-3" data-toggle="modal" data-target="#exampleModalCenter">
-          <img class="antiCardServices" src="../../assets/img/icons/3.png" width="70px"  height="88px"/>
-        <h3 class="heading3 antiCardServices">Mobile Application</h3>
-        <p class="paraServices antiCardServices">Mobile application is an essential gateway for an establishing company. We boot your application with interactions and smooth Data transactions. Simple end user effective.</p>
-      </div>
-      <div class="col-md-4 mb-4 text-center pt-3" data-toggle="modal" data-target="#exampleModalCenter">
-        <img class="antiCardServices" src="../../assets/img/icons/1.png" width="70px"  height="88px" />
-        <h3 class="heading3 antiCardServices">Hardware Support</h3>
-        <p class="paraServices antiCardServices">Setting up an office requires best quality of hardware products including laptops, server, wifi etc. We provide best availbale in market with unique and customized offers and single point support of Zinfinity. </p>
-      </div>
-    </div>
-  </div>
+  <app-section-services></app-section-services>
 </section>
 
-<!-- Modal -->
-<!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
 <!-- INFO SECTION -->
 <section id="info1" class="py-3">
-    <div class="container">
-        <h1 class="text-center mainheading">How we work?</h1>
-      <div class="row" style="margin-bottom: 50px">
-          <div class="col-md-4" >
-              <img src="../../assets/img/devops.png" alt="" class="img-fluid">
-          </div>
-          <div class="col-md-1"></div>
-        <div class="col-md-7 text-center align-self-center">
-        <h3>"The quickest methods are not always the fastest one - Gorden Beeming"</h3>
-        <h5 style="text-align: justify">Visualizing a reflection of an idea as a software solution requires a <strong>Vision.</strong> A vision which covers
-        a Bug-free environment, Future scope of your software, The efficient technical stack which is capable of fulfiling your
-      future requirements, the efficiency to handle worst case scenario in production and self recoverable in case of crash</h5>
-      <h5 style="text-align: justify">And so our team is capable of balancing the unique customized design with high end technology out there in market
-        We Design it, Develope it, Build it, Deploy it and Monitor the same with Support
-      </h5><br>
-      <h4 style="text-align: justify">Its team <strong>Zinfinity</strong> in your service to transform your ideas into software solution..!</h4>
-          <!-- <p style="text-align:justify">SDLC is OLD – DevOps is the new trend! Ideation to reality we deliver what you would love and what your customers would appreciate with the iterative and hybrid model of Agile and Waterfall development</p> -->
-        </div>
-        
-      </div>
-      <!-- <div class="row" style="line-height:5">
-          <div class="col-md-3">
-              </div>
-            <div class="col-md-6">
-                <img src="../../assets/img/WhoWeAre.png" alt="" class="img-fluid">
-              </div>
-            <div class="col-md-3">
-              </div>
-      </div> -->
-    </div>
-  </section>
-
-  <!-- PHOTO GALLERY -->
-<!-- <section id="gallery" class="py-5" style="background-color: black; color : white">
-    <div class="container">
-      <h1 class="text-center mainheading">Our Work</h1>
-      <p class="text-center">Check out our Work</p> -->
-      <!-- <div class="row mb-4">
-        <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery" data-height="560"
-            data-width="560">
-            <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid">
-          </a>
-        </div>
-  
-        <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery" data-height="561"
-            data-width="561">
-            <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
-          </a>
-        </div>
-  
-        <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562"
-            data-width="562">
-            <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
-          </a>
-        </div>
-      </div>
-  
-      <div class="row mb-4">
-        <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery" data-height="563"
-            data-width="563">
-            <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid">
-          </a>
-        </div>
-  
-        <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery" data-height="564"
-            data-width="564">
-            <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid">
-          </a>
-        </div>
-  
-        <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565"
-            data-width="565">
-            <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid">
-          </a>
-        </div>
-      </div> -->
-    <!-- </div>
-  </section> -->
+  <app-info-section></app-info-section>    
+</section>
   
 
-  <!-- CONTACT SECTION -->
+<!-- CONTACT SECTION -->
 <section id="contact">
-    <div class="container">
-        <h1 class="text-center mainheading">Get In Touch</h1>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card p-3">
-            <div class="card-body">
-              <h4>Address</h4>
-              <p>C/103, Manik Apts. 2, Bhavani Shankar Road, Gopinath Chavan Chowk, West, Dadar, Mumbai, Maharashtra 400028</p>
-              <h4>Email</h4>
-              <p>info@Zinfinity.in</p>
-              <h4>Phone</h4>
-              <p>+91 98197 03050<br>+91 97736 37141</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="card p-4">
-            <div class="card-body">
-              <h3 class="text-center">Please fill out this form to contact us</h3>
-              <hr>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="First Name">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Last Name">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Email">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Phone Number">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <textarea class="form-control" placeholder="Message"></textarea>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group">
-                      <input type="submit" value="Submit" class="btn btn-outline-info btn-block">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <app-contact></app-contact>
+</section>
   
-<!-- HOME HEADING SECTION -->
-<!-- <section id="home-heading" class="p-5">
-  <div class="dark-overlay">
-    <div class="row">
-      <div class="col">
-        <div class="container pt-5">
-          <h1>Are You Ready To Get Started?</h1>
-          <p class="d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est eaque magni sit dolores. Nisi, dolor nam modi perspiciatis
-            consequatur soluta.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
-<!-- INFO SECTION -->
-<!-- <section id="info" class="py-3">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 align-self-center">
-        <h3>Lorem Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet blanditiis incidunt iusto corrupti illum
-          cum laudantium ex sequi amet.</p>
-        <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
-      </div>
-      <div class="col-md-6">
-        <img src="img/laptop.png" alt="" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</section> -->
-
-<!-- VIDEO PLAY -->
-<!-- <section id="video-play">
-  <div class="dark-overlay">
-    <div class="row">
-      <div class="col">
-        <div class="container p-5">
-          <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal" data-target="#videoModal">
-            <i class="fas fa-play fa-3x"></i>
-          </a>
-          <h1>See What We Do</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
-
-<!-- NEWSLETTER -->
-<!-- <section id="newsletter" class="text-center p-5 bg-dark text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h1>Sign Up For Our Newsletter</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores consectetur, quae ducimus voluptates
-          vero repellendus architecto maiores recusandae mollitia?</p>
-        <form class="form-inline justify-content-center">
-          <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Name">
-          <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Email">
-          <button class="btn btn-primary mb-2">Submit</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section> -->
-
-<!-- <script>
-//Smooth Scroll
-$(function() {
-  $('a[href*=#]:not([href=#])').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-      var target = $(this.hash);
-      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-      if (target.length) {
-        $('html,body').animate({
-          scrollTop: target.offset().top
-        }, 1000);
-        return false;
-      }
-    }
-  });
-});
-</script> -->
