--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,105 +1,90 @@
- <!-- PAGE HEADER -->
- <header id="page-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 m-auto text-center">
-        <h1>Contact Us</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
+<div class="container">
+  <h1 class="text-center mainheading">Get In Touch</h1>
+<div class="row">
+  <div class="col-md-4">
+    <div class="card p-3">
+      <div class="card-body">
+        <h4>Address</h4>
+        <p>C/103, Manik Apts. 2, Bhavani Shankar Road, Gopinath Chavan Chowk, Dadar West, Mumbai, Maharashtra 400028 <br><a href="https://goo.gl/maps/wELbZhErhL42">Get Directions</a></p>
+        
+        <h4>Email</h4>
+        <p>info@zinfinity.in</p>
+        <h4>Phone</h4>
+        <p>+91 98197 03050<br>+91 97736 37141</p>
       </div>
     </div>
   </div>
-</header>
-
-<!-- CONTACT SECTION -->
-<section id="contact" class="py-3">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card p-4">
-          <div class="card-body">
-            <h4>Get In Touch</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, odio!</p>
-            <h4>Address</h4>
-            <p>550 Main st, Boston MA</p>
-            <h4>Email</h4>
-            <p>test@test.com</p>
-            <h4>Phone</h4>
-            <p>(555) 555-5555</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-8">
-        <div class="card p-4">
-          <div class="card-body">
-            <h3 class="text-center">Please fill out this form to contact us</h3>
-            <hr>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="First Name">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Last Name">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Email">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Phone Number">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group">
-                  <textarea class="form-control" placeholder="Message"></textarea>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <input type="submit" value="Submit" class="btn btn-outline-danger btn-block">
-                </div>
+  <div class="col-md-8">
+    <div class="card p-4">
+      <div class="card-body">
+        
+        <h3 class="text-center">Please fill out this form to contact us</h3>
+        <hr>
+        <br>
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+            
+        <div class="row">
+          
+          <div class="col-md-6">
+              
+            <div class="form-group">
+              <input type="text" formControlName="fname" class="form-control" placeholder="First Name" [ngClass]="{ 'invalid': submitted && registerForm.controls.fname.errors }">
+              <div *ngIf="submitted && registerForm.controls.fname.errors" class="error">
+                <div *ngIf="registerForm.controls.fname.errors.required">First Name is required</div>
+                <div *ngIf="registerForm.controls.fname.errors.pattern">Invalid Name</div>
               </div>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" formControlName="lname" class="form-control" placeholder="Last Name" [ngClass]="{ 'invalid': submitted && registerForm.controls.lname.errors }">
+              <div *ngIf="submitted && registerForm.controls.lname.errors" class="error">
+                <div *ngIf="registerForm.controls.lname.errors.required">Last Name is required</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="emailid" placeholder="Email"  [ngClass]="{ 'invalid': submitted && registerForm.controls.emailid.errors }">
+              <div *ngIf="submitted && registerForm.controls.emailid.errors" class="error">
+                <div *ngIf="registerForm.controls.emailid.errors.required">Email is required</div>
+                <div *ngIf="registerForm.controls.emailid.errors.email">Invalid Email</div>
+            </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" formControlName="phno" class="form-control" placeholder="Phone Number" [ngClass]="{ 'invalid': submitted && registerForm.controls.phno.errors }">
+              <div *ngIf="submitted && registerForm.controls.phno.errors" class="error">
+                <div *ngIf="registerForm.controls.phno.errors.required">Phone no is required</div>
+                <div *ngIf="registerForm.controls.phno.errors.pattern">Invalid Phone No</div>
+                <div *ngIf="registerForm.controls.phno.errors.minLength">Invalid Phone No</div>
+                <div *ngIf="registerForm.controls.phno.errors.maxLength">Invalid Phone No</div>
+            </div>
+            </div>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <textarea class="form-control"  formControlName="msg" placeholder="Message"  [ngClass]="{ 'invalid': submitted && registerForm.controls.msg.errors}"></textarea>
+              <div *ngIf="submitted && registerForm.controls.msg.errors" class="error">
+                <div *ngIf="registerForm.controls.msg.errors.required">Comment is required</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group">
+               <input type="submit" value="Submit" class="btn btn-outline-info btn-block">
+               <span *ngIf="startspinner" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+               <span class="sr-only">Loading...</span>
+              </div>
+          </div>
+       
+        </div>
+      </form>
       </div>
     </div>
   </div>
-</section>
-
-<!-- STAFF -->
-<section id="staff" class="py-5 text-center bg-dark text-white">
-  <div class="container">
-    <h1>Our Staff</h1>
-    <hr>
-    <div class="row">
-      <div class="col-md-3">
-        <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle mb-2">
-        <h4>Jane Doe</h4>
-        <small>Marketing Manager</small>
-      </div>
-      <div class="col-md-3">
-        <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle mb-2">
-        <h4>Sara Williams</h4>
-        <small>Business Manager</small>
-      </div>
-      <div class="col-md-3">
-        <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle mb-2">
-        <h4>John Doe</h4>
-        <small>CEO</small>
-      </div>
-      <div class="col-md-3">
-        <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle mb-2">
-        <h4>Steve Smith</h4>
-        <small>Web Developer</small>
-      </div>
-    </div>
-  </div>
-</section>
+</div>
+</div>
