--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,102 @@
 <router-outlet></router-outlet>
 
 <!-- FOOTER -->
-<footer id="main-footer" class="text-center p-4">
+<!-- Footer -->
+<!-- Footer -->
+<!-- Footer -->
+<footer id="sub-footer" class="page-footer font-small blue pt-5">
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left pb-5">
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-5 mt-md-0 mt-3 pr-5">
+
+          <!-- Content -->
+          <img src="../assets/img/zinfinity_white_logo.png" width="250px"/>
+          <br><br>
+          <p style="text-align:justify">Need disruptive innovation to accelerate your business?
+              We provide UI-UX and quality assured software solutions to digitally transform your business and ace your competition</p>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none pb-3">
+
+        <!-- Grid column -->
+        <div class="col-md-4 mb-md-0 mb-3">
+
+            <!-- Links -->
+            <h5 class="text-uppercase">Follow Us</h5>
+
+            <ul class="list-unstyled pt-4" style="position: relative; display: inline-block;">
+               
+                  <a class="fb-ic" target="_blank" style="color:white" href="https://www.facebook.com/ZinfinityTechnologies">
+                      <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                    </a>
+                  <a class="tw-ic" target="_blank" style="color:white" href="https://twitter.com/Zinfinity_Tech">
+                      <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                    </a>
+              
+                  <a class="li-ic" target="_blank" style="color:white" href="https://www.linkedin.com/company/zinfinity-technologies-llp">
+                      <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                    </a>
+
+              
+                  <a class="ins-ic" target="_blank" style="color:white" href="https://www.instagram.com/zinfinity_tech/">
+                      <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                    </a>
+                  
+            </ul>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 mb-md-0 mb-3">
+
+            <!-- Links -->
+            <h5 class="text-uppercase">Quick Links</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#showcase"  style="color:white">Home</a>
+              </li>
+              <li>
+                <a href="#about"  style="color:white">About</a>
+              </li>
+              <li>
+                <a href="#home-icons"  style="color:white">Services</a>
+              </li>
+              <li>
+                <a href="#contact"  style="color:white">Contact</a>
+              </li>
+            </ul>
+
+          </div>
+          <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div id="main-footer" class="footer-copyright text-center py-3"><p>Copyright &copy;
+        <span id="year"></span> 2018 by Zinfinity Technologies LLP. All Rights Reserved.</p>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+<!-- Footer -->
+ 
+<!-- Footer -->
+<!-- <footer id="main-footer" class="text-center p-4">
   <div class="container">
     <div class="row">
       <div class="col">
@@ -44,4 +139,4 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
